Add custom app icon

--- a/Algorhythm/LaunchScreen.storyboard
+++ b/Algorhythm/LaunchScreen.storyboard
@@ -42,7 +42,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="algorhythmlogo" width="360" height="360"/>
+        <image name="algorhythmlogo" width="341.33334350585938" height="341.33334350585938"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
